# Korneva-games-project

./: Makefile  pyproject.toml
Korneva_games/: engine.py
Korneva_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
Korneva_games/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  VD_prime.py  VD_progression.py
