[project]
name = "korneva-games-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Korneva_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.scripts]
VD-games = "Korneva_games.scripts.VD_main:main"
VD-even = "Korneva_games.scripts.VD_even:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
